feat: first ixo graph

--- a/src/app/pages/transactions-details/transactions-details.html
+++ b/src/app/pages/transactions-details/transactions-details.html
@@ -1,5 +1,5 @@
 <div class="transactions-details">
     <h2>Transações de {{ year }}/{{ month }}</h2>
+    <canvas #dailyBalanceChart id="daily-balance-chart"></canvas>
     <app-transactions-table [transactions]="transactions"></app-transactions-table>
 </div>
-
