--- a/src/app/pages/budget/budget.scss
+++ b/src/app/pages/budget/budget.scss
@@ -240,7 +240,7 @@ canvas {
 }
 
 .budget-summary-value {
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 600;
     color: #374151;
 }
@@ -528,7 +528,7 @@ input:checked + .slider:before {
 
 .category-expense-item .expense-value {
     font-weight: 600;
-    color: #374151;
+    color: #888;
     margin-left: 1.2rem;
     min-width: 90px;
     text-align: right;
@@ -734,4 +734,10 @@ input:checked + .slider:before {
     color: #a5b4fc;
     font-size: 1.5em;
     margin-bottom: 0.5em;
+}
+
+.header-with-image {
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
 }
