feat: save budget button

--- a/src/app/pages/budget/budget.html
+++ b/src/app/pages/budget/budget.html
@@ -48,6 +48,11 @@
                                  style="filter: invert(1);">
                             <i class="fas fa-trash"></i> Restaurar
                         </button>
+                        <button id="save-budget" class="save-budget-btn" (click)="saveCurrentBudget()">
+                            <img ngSrc="/assets/icons/save.svg" alt="Salvar Orçamento" height="16" width="16"
+                                 style="vertical-align: middle; margin-right: 6px; filter: invert(1);">
+                            Salvar Orçamento
+                        </button>
                     </div>
                 </div>
             </div>
