fix: saved budget loading

--- a/src/app/pages/budget/budget.html
+++ b/src/app/pages/budget/budget.html
@@ -6,7 +6,7 @@
                     [disabled]="!savedBudgets || savedBudgets.length === 0">
                 <img ngSrc="/assets/icons/save.svg" alt="Budgets Salvos" height="20" width="20"
                      style="filter: invert(0.2);">
-                Orçamento salvos
+                Orçamentos salvos
             </button>
         </div>
     </header>
