feat: salary calculator

--- a/src/app/components/nav/nav.html
+++ b/src/app/components/nav/nav.html
@@ -41,5 +41,9 @@
             <img src="/assets/icons/target.svg">
             <span class="nav-label" *ngIf="expanded">Orçamento</span>
         </a>
+        <a routerLink="/calculator" routerLinkActive class="nav-link">
+            <img src="/assets/icons/calculator.svg">
+            <span class="nav-label" *ngIf="expanded">Calculadora</span>
+        </a>
     </div>
 </nav>
